--- a/directbak.yaml
+++ b/directbak.yaml
@@ -873,6 +873,7 @@ payload:
   - '+.11111s.info'
   - '+.111155268.com'
   - '+.1113.cc'
+  - '+.1113dns.com'
   - '+.11160066.com'
   - '+.111com.net'
   - '+.111g.com'
@@ -1750,6 +1751,7 @@ payload:
   - '+.19kan.com'
   - '+.19lou.com'
   - '+.19mi.net'
+  - '+.19pay.net'
   - '+.19ued.com'
   - '+.19where.com'
   - '+.19xsf.com'
@@ -2210,6 +2212,7 @@ payload:
   - '+.23us.so'
   - '+.23us.tv'
   - '+.23us23us.com'
+  - '+.23uswx.com'
   - '+.23wow.com'
   - '+.23wx.cc'
   - '+.23wx.io'
@@ -3989,7 +3992,6 @@ payload:
   - '+.51peptide.com'
   - '+.51pgzs.com'
   - '+.51php.com'
-  - '+.51piaozi.com'
   - '+.51pibu.com'
   - '+.51pigai.com'
   - '+.51ping.com'
@@ -4409,7 +4411,6 @@ payload:
   - '+.52pi.com'
   - '+.52pi.net'
   - '+.52pictu.com'
-  - '+.52pjb.net'
   - '+.52pk.com'
   - '+.52pk.net'
   - '+.52pkvr.com'
@@ -5645,6 +5646,7 @@ payload:
   - '+.77ds.com'
   - '+.77dushu.com'
   - '+.77ebooks.com'
+  - '+.77hd.com'
   - '+.77hei.com'
   - '+.77l.com'
   - '+.77mh.app'
@@ -7497,6 +7499,7 @@ payload:
   - '+.adxwork.com'
   - '+.adyounger.com'
   - '+.adyun.com'
+  - '+.adzar-energy.com'
   - '+.adzh.com'
   - '+.adzhongdian.com'
   - '+.adzop.com'
@@ -9062,6 +9065,7 @@ payload:
   - '+.artronimages.com'
   - '+.artrus.net'
   - '+.artsbuy.com'
+  - '+.artverse.work'
   - '+.artvisioncg.com'
   - '+.artwe.com'
   - '+.artwer.com'
@@ -9143,7 +9147,6 @@ payload:
   - '+.aspire-info.com'
   - '+.aspirecn.com'
   - '+.aspirer.wang'
-  - '+.aspku.com'
   - '+.aspsky.net'
   - '+.aspx.cc'
   - '+.aspxhome.com'
@@ -9724,7 +9727,6 @@ payload:
   - '+.baiyinggd.com'
   - '+.baiyjk.com'
   - '+.baiyou100.com'
-  - '+.baiyouo.com'
   - '+.baiyu.tech'
   - '+.baiyuemi.com'
   - '+.baiyunairport.com'
@@ -10391,6 +10393,7 @@ payload:
   - '+.benlailife.com'
   - '+.benmao8.com'
   - '+.benmu-health.com'
+  - '+.benniux.com'
   - '+.bensedl.com'
   - '+.benseshijue.com'
   - '+.benshouji.com'
@@ -10906,6 +10909,7 @@ payload:
   - '+.bitmap3d.com'
   - '+.bitmingw.com'
   - '+.bitol.net'
+  - '+.bitonloop.com'
   - '+.bitqiu.com'
   - '+.bitscn.com'
   - '+.bitscn.net'
@@ -11341,7 +11345,6 @@ payload:
   - '+.bluecefa.com'
   - '+.blued.com'
   - '+.bluedon.com'
-  - '+.bluefeel.com'
   - '+.bluefite.com'
   - '+.bluefocus.com'
   - '+.blueglass.vip'
@@ -11925,6 +11928,7 @@ payload:
   - '+.bw1006.com'
   - '+.bw3.site'
   - '+.bw30yun.com'
+  - '+.bw36jnxjfna.com'
   - '+.bw40.net'
   - '+.bw8848.com'
   - '+.bwae.org'
@@ -12601,6 +12605,7 @@ payload:
   - '+.cccbs.net'
   - '+.ccccl.net'
   - '+.cccdun.com'
+  - '+.cccf-cloud.com'
   - '+.ccchz.com'
   - '+.cccitu.com'
   - '+.cccity.cc'
@@ -13699,6 +13704,7 @@ payload:
   - '+.chetuanwang.net'
   - '+.chetuobang.com'
   - '+.chetx.com'
+  - '+.chetxt.com'
   - '+.chevip.com'
   - '+.chewen.com'
   - '+.chexiang.com'
@@ -15136,6 +15142,7 @@ payload:
   - '+.clzycld.com'
   - '+.cm-analysis.com'
   - '+.cm-iov.com'
+  - '+.cm-worklink.com'
   - '+.cm233.com'
   - '+.cm3721.com'
   - '+.cmacredit.org'
@@ -16158,7 +16165,6 @@ payload:
   - '+.coship.com'
   - '+.cosize.com'
   - '+.cosmoplat.com'
-  - '+.cosmos-21.com'
   - '+.cosoar.com'
   - '+.cosplay8.com'
   - '+.cosplayla.com'
@@ -16607,7 +16613,6 @@ payload:
   - '+.csrlzyw.com'
   - '+.csrpme.com'
   - '+.css-js.com'
-  - '+.css.network'
   - '+.css6.com'
   - '+.css88.com'
   - '+.cssa-swansea.com'
@@ -17463,6 +17468,7 @@ payload:
   - '+.dashengji.com'
   - '+.dashenglaile.com'
   - '+.dashengpan.com'
+  - '+.dashengzuji.com'
   - '+.dashenquan.com'
   - '+.dashentv.com'
   - '+.dashet.com'
@@ -18631,6 +18637,7 @@ payload:
   - '+.dmyzw.com'
   - '+.dmzfa.com'
   - '+.dmzj.com'
+  - '+.dmzj8.com'
   - '+.dmzx.com'
   - '+.dn.com'
   - '+.dn1234.com'
@@ -23417,6 +23424,7 @@ payload:
   - '+.gezida.com'
   - '+.gezila.com'
   - '+.gezkdx7.com'
+  - '+.gf-cloud.com'
   - '+.gf-funds.com'
   - '+.gf.cc'
   - '+.gf521.com'
@@ -23688,7 +23696,6 @@ payload:
   - '+.globeauto.org'
   - '+.globeedu.com'
   - '+.globeimmi.com'
-  - '+.globerexpress.com'
   - '+.globrand.com'
   - '+.globrand.net'
   - '+.glodon.com'
@@ -24057,6 +24064,7 @@ payload:
   - '+.gouwubang.com'
   - '+.gouwuke.com'
   - '+.gouwuyu.com'
+  - '+.gouyoukeji.com'
   - '+.govfz.com'
   - '+.govhebie.com'
   - '+.govmade.com'
@@ -24691,6 +24699,7 @@ payload:
   - '+.gxmlyjy.com'
   - '+.gxmmkt.com'
   - '+.gxnas.com'
+  - '+.gxota.com'
   - '+.gxp.cc'
   - '+.gxpfyy.com'
   - '+.gxqcw.com'
@@ -25098,7 +25107,6 @@ payload:
   - '+.haijia.org'
   - '+.haijiangzx.com'
   - '+.haijiaonet.com'
-  - '+.haijincang.com'
   - '+.haijingfang.cc'
   - '+.haiketrip.com'
   - '+.hailiangedu.com'
@@ -25939,7 +25947,6 @@ payload:
   - '+.hdavchina.com'
   - '+.hdb.com'
   - '+.hdbaichuan.com'
-  - '+.hdchd.cc'
   - '+.hdcolorant.com'
   - '+.hdd-group.com'
   - '+.hddata.net'
@@ -26715,6 +26722,7 @@ payload:
   - '+.hkzlcm.com'
   - '+.hl-brushes.com'
   - '+.hl95.com'
+  - '+.hl95001.com'
   - '+.hlapi.com'
   - '+.hlbeixiu.com'
   - '+.hlbeixiu.net'
@@ -26846,6 +26854,7 @@ payload:
   - '+.hnhxin.com'
   - '+.hnhxxk.com'
   - '+.hniec.org'
+  - '+.hniic.com'
   - '+.hniois.com'
   - '+.hnisca.org'
   - '+.hniso.net'
@@ -28706,6 +28715,7 @@ payload:
   - '+.iblue.me'
   - '+.ibluefrog.com'
   - '+.ibluesocial.com'
+  - '+.ibmhz.com'
   - '+.ibmwclub.com'
   - '+.ibook8.com'
   - '+.ibooker.cc'
@@ -29526,7 +29536,6 @@ payload:
   - '+.imcn.me'
   - '+.imdac.org'
   - '+.imdadui.com'
-  - '+.imdaike.com'
   - '+.imdo.co'
   - '+.imdodo.com'
   - '+.imdou.net'
@@ -30224,7 +30233,6 @@ payload:
   - '+.it525.com'
   - '+.it528.com'
   - '+.it578.com'
-  - '+.it610.com'
   - '+.it666.com'
   - '+.it689.com'
   - '+.it69.net'
@@ -31576,6 +31584,7 @@ payload:
   - '+.jingwei.com'
   - '+.jingwei.link'
   - '+.jingwuhui.com'
+  - '+.jingwxcx.com'
   - '+.jingxi.com'
   - '+.jingxianglawfirm.com'
   - '+.jingxinad.com'
@@ -33179,6 +33188,7 @@ payload:
   - '+.kakalili.com'
   - '+.kakamobi.com'
   - '+.kakatv1.com'
+  - '+.kakucloud.com'
   - '+.kalading.com'
   - '+.kalazan.com'
   - '+.kalcaddle.com'
@@ -34155,6 +34165,7 @@ payload:
   - '+.ku987.com'
   - '+.kuabaobao.com'
   - '+.kuacg.com'
+  - '+.kuaddkee.cyou'
   - '+.kuafugame.com'
   - '+.kuai-fei.com'
   - '+.kuai-ying.com'
@@ -34772,7 +34783,6 @@ payload:
   - '+.lanxiniu.com'
   - '+.lanxiongsports.com'
   - '+.lanxum.com'
-  - '+.lanyaa.com'
   - '+.lanyingwang.com'
   - '+.lanyuanxiaoyao.com'
   - '+.lanyunbrand.com'
@@ -35157,6 +35167,7 @@ payload:
   - '+.leiqunjs.com'
   - '+.leirenw.com'
   - '+.leishen-lidar.com'
+  - '+.leishouwin.cc'
   - '+.leisoon.com'
   - '+.leisu.com'
   - '+.leisu123.com'
@@ -35607,7 +35618,6 @@ payload:
   - '+.liexing.com'
   - '+.lieyou.com'
   - '+.lieyuncapital.com'
-  - '+.lieyuncj.com'
   - '+.lif8.com'
   - '+.lifan.com'
   - '+.life365.com'
@@ -37924,7 +37934,6 @@ payload:
   - '+.meijutt.com'
   - '+.meijutt.tv'
   - '+.meijuxia.com'
-  - '+.meijuxq.com'
   - '+.meijuzhan.com'
   - '+.meijuzj.com'
   - '+.meikankeji.com'
@@ -38218,6 +38227,7 @@ payload:
   - '+.mhhf.net'
   - '+.mhi-ac.com'
   - '+.mhimg.com'
+  - '+.mhito.net'
   - '+.mhpdf.com'
   - '+.mhsf.com'
   - '+.mht.la'
@@ -38402,7 +38412,6 @@ payload:
   - '+.mihuwa.com'
   - '+.miicp.com'
   - '+.miidc.com'
-  - '+.miidi.net'
   - '+.miidii.tech'
   - '+.miidol.com'
   - '+.miiee.com'
@@ -38574,6 +38583,7 @@ payload:
   - '+.minixiazai.com'
   - '+.miniyounger.com'
   - '+.minor-tech.com'
+  - '+.minqingguancha.com'
   - '+.minra.com'
   - '+.minrank.com'
   - '+.minretail.com'
@@ -39882,7 +39892,6 @@ payload:
   - '+.nanqi.org'
   - '+.nanrenbang.in'
   - '+.nanrentu.cc'
-  - '+.nanrenvip2021.xyz'
   - '+.nanrenwa.com'
   - '+.nanshanski.com'
   - '+.nanshifaxing.com'
@@ -40481,6 +40490,7 @@ payload:
   - '+.nizuixing.com'
   - '+.nj-bl.com'
   - '+.nj-marathon.org'
+  - '+.nj-qiyiguo.net'
   - '+.njbaisou.com'
   - '+.njc100.com'
   - '+.njcdata.com'
@@ -40805,7 +40815,6 @@ payload:
   - '+.ntxiru.com'
   - '+.ntyswlkj.com'
   - '+.ntyy888.com'
-  - '+.ntzrj.com'
   - '+.nu1l.com'
   - '+.nuan.io'
   - '+.nuandao.com'
@@ -41789,7 +41798,6 @@ payload:
   - '+.pandadastudio.com'
   - '+.pandafoundation.org'
   - '+.pandahelp.vip'
-  - '+.pandaimg.com'
   - '+.pandainc.cc'
   - '+.pandaminer.com'
   - '+.pandara.xyz'
@@ -42486,7 +42494,6 @@ payload:
   - '+.pintuer.com'
   - '+.pintuxiu.net'
   - '+.pinuc.com'
-  - '+.pinwenba.com'
   - '+.pinyuan.cc'
   - '+.pinyuew.com'
   - '+.pinyuncloud.com'
@@ -43281,6 +43288,7 @@ payload:
   - '+.qcymall.com'
   - '+.qcyoung.com'
   - '+.qd-metro.com'
+  - '+.qd-weimob.com'
   - '+.qd256.com'
   - '+.qd315.net'
   - '+.qdac.cc'
@@ -44407,6 +44415,7 @@ payload:
   - '+.quanmama.com'
   - '+.quanmamaimg.com'
   - '+.quanmeipai.com'
+  - '+.quanmin-game.com'
   - '+.quanmin.tv'
   - '+.quanmin110.com'
   - '+.quanminbagua.com'
@@ -45898,7 +45907,6 @@ payload:
   - '+.sanhao.com'
   - '+.sanhaofushi.com'
   - '+.sanhaoradio.com'
-  - '+.sanhaostreet.com'
   - '+.sanhe-scale.com'
   - '+.sanhucidiao.cc'
   - '+.sanjiang.com'
@@ -45916,7 +45924,6 @@ payload:
   - '+.sankuai.com'
   - '+.sanlan123.com'
   - '+.sanlangwang.ink'
-  - '+.sannongejia.com'
   - '+.sanpowergroup.com'
   - '+.sanpuzhiyao.com'
   - '+.sanqin.com'
@@ -46225,6 +46232,7 @@ payload:
   - '+.sdfll.com'
   - '+.sdfmgg.com'
   - '+.sdg-china.com'
+  - '+.sdgcp.com'
   - '+.sdgdxt.com'
   - '+.sdgh.net'
   - '+.sdgho.com'
@@ -46895,6 +46903,7 @@ payload:
   - '+.sharewaf.com'
   - '+.sharewithu.com'
   - '+.sharexbar.com'
+  - '+.sharingclass.vip'
   - '+.sharkselection.com'
   - '+.sharpbai.com'
   - '+.sharpmobi.com'
@@ -48374,6 +48383,7 @@ payload:
   - '+.smdmark.com'
   - '+.smdyvip.com'
   - '+.smdyy.cc'
+  - '+.sme-cn.com'
   - '+.sme8718.com'
   - '+.smebb.com'
   - '+.smemo.info'
@@ -48876,6 +48886,7 @@ payload:
   - '+.spbo1.com'
   - '+.spbosta.org'
   - '+.spc365.net'
+  - '+.spcapsules.com'
   - '+.spcdntip.com'
   - '+.spcywang.com'
   - '+.spdbh5.com'
@@ -51900,7 +51911,6 @@ payload:
   - '+.traineexp.com'
   - '+.trainingipv6.com'
   - '+.trait-wholesale.com'
-  - '+.tranbanker.com'
   - '+.tranbbs.com'
   - '+.trans4e.com'
   - '+.transcn.org'
@@ -53198,7 +53208,6 @@ payload:
   - '+.usbxyz.com'
   - '+.uscnk.com'
   - '+.uscxm.com'
-  - '+.usd-cny.com'
   - '+.usdxz1.com'
   - '+.usdxz1.net'
   - '+.use-trust.com'
@@ -54889,6 +54898,7 @@ payload:
   - '+.weishang99.net'
   - '+.weishangagent.com'
   - '+.weishangshijie.com'
+  - '+.weishangtui.vip'
   - '+.weishangye.com'
   - '+.weishangzhonghe.com'
   - '+.weishengka.com'
@@ -54914,7 +54924,6 @@ payload:
   - '+.weiwangvip.com'
   - '+.weiwanhudong.com'
   - '+.weiwanjia.com'
-  - '+.weiwei123.com'
   - '+.weiweixiao.net'
   - '+.weiweixiong.com'
   - '+.weiweiyi.com'
@@ -60023,7 +60032,6 @@ payload:
   - '+.yi-you.org'
   - '+.yi-yun-tong.com'
   - '+.yi114.com'
-  - '+.yi2.net'
   - '+.yi588.com'
   - '+.yi6.com'
   - '+.yi7.com'
@@ -60131,6 +60139,7 @@ payload:
   - '+.yihedoors.com'
   - '+.yihegold.com'
   - '+.yihong001.com'
+  - '+.yihongzhihui.com'
   - '+.yihu.com'
   - '+.yihuacomputer.com'
   - '+.yihuikeji.vip'
@@ -61304,6 +61313,7 @@ payload:
   - '+.yqxiuyoung.com'
   - '+.yqxs.cc'
   - '+.yqyanhong.com'
+  - '+.yqzww.cc'
   - '+.yqzww.la'
   - '+.yqzww.net'
   - '+.yr-info.com'
@@ -61427,6 +61437,7 @@ payload:
   - '+.ytszg.com'
   - '+.ytsznyy.com'
   - '+.ytud.net'
+  - '+.ytusmart.com'
   - '+.ytxedu.com'
   - '+.ytxsc.com'
   - '+.ytyug.com'
@@ -61633,6 +61644,7 @@ payload:
   - '+.yukuai.com'
   - '+.yukunweb.com'
   - '+.yul8.com'
+  - '+.yule114.com'
   - '+.yule116.com'
   - '+.yule263.com'
   - '+.yuledaily.com'
@@ -63440,6 +63452,7 @@ payload:
   - '+.zhongleny.com'
   - '+.zhonglian.com'
   - '+.zhonglianfactoring.com'
+  - '+.zhongliangxny.com'
   - '+.zhonglianhuashu.com'
   - '+.zhongliucls.com'
   - '+.zhongliuyiyuan.com'
@@ -64410,6 +64423,7 @@ payload:
   - '+.zrcaifu.com'
   - '+.zrcbank.com'
   - '+.zrfan.com'
+  - '+.zrhsh.com'
   - '+.zring.com'
   - '+.zrj96.com'
   - '+.zrjhwenhua.com'
