--- a/directbak.yaml
+++ b/directbak.yaml
@@ -1620,6 +1620,7 @@ payload:
   - '+.17you.com'
   - '+.17yucai.com'
   - '+.17yund.com'
+  - '+.17yunlian.net'
   - '+.17yy.com'
   - '+.17zhaogong.com'
   - '+.17zhiliao.com'
@@ -1702,6 +1703,7 @@ payload:
   - '+.18yl.com'
   - '+.18zhuanqian.com'
   - '+.18zw.com'
+  - '+.19.com'
   - '+.1900.live'
   - '+.1903it.com'
   - '+.1905.com'
@@ -2710,6 +2712,7 @@ payload:
   - '+.33trip.com'
   - '+.33xs.com'
   - '+.33yq.com'
+  - '+.34.com'
   - '+.341666666.com'
   - '+.3456.com'
   - '+.3456.tv'
@@ -3100,6 +3103,7 @@ payload:
   - '+.38hzt.com'
   - '+.38mhw.com'
   - '+.38zj.com'
+  - '+.39.com'
   - '+.39.net'
   - '+.391065.com'
   - '+.3911.com'
@@ -4794,6 +4798,7 @@ payload:
   - '+.58yuefu.com'
   - '+.58yuesao.com'
   - '+.58zhuiju.com'
+  - '+.59.com'
   - '+.5906333.com'
   - '+.590m.com'
   - '+.59120.com'
@@ -5103,7 +5108,6 @@ payload:
   - '+.618hr.com'
   - '+.618ky.com'
   - '+.61916.com'
-  - '+.619k.com'
   - '+.61baobao.com'
   - '+.61bb.com'
   - '+.61bbw.com'
@@ -5167,6 +5171,7 @@ payload:
   - '+.64ma.com'
   - '+.64mv.com'
   - '+.64pay.com'
+  - '+.65.com'
   - '+.651700.com'
   - '+.6528.com'
   - '+.654320.com'
@@ -5329,6 +5334,7 @@ payload:
   - '+.68web.net'
   - '+.68websoft.com'
   - '+.68youhui.com'
+  - '+.69.com'
   - '+.69005a.com'
   - '+.6903.com'
   - '+.69260.com'
@@ -5441,6 +5447,7 @@ payload:
   - '+.7-hotel.com'
   - '+.7-vk.com'
   - '+.7-wx.com'
+  - '+.70.com'
   - '+.700bike.com'
   - '+.700live.com'
   - '+.700static.com'
@@ -6404,7 +6411,6 @@ payload:
   - '+.91boshuo.com'
   - '+.91bushou.com'
   - '+.91caijia.com'
-  - '+.91canyin.com'
   - '+.91carnet.com'
   - '+.91cdkey.com'
   - '+.91ceshi.com'
@@ -6430,6 +6436,7 @@ payload:
   - '+.91dnso.com'
   - '+.91doujin.com'
   - '+.91dub.com'
+  - '+.91duba.com'
   - '+.91duobaoyu.com'
   - '+.91dyl.com'
   - '+.91exam.org'
@@ -7476,7 +7483,6 @@ payload:
   - '+.adtchrome.com'
   - '+.adtianmai.com'
   - '+.adtime.com'
-  - '+.adtiming.com'
   - '+.adtmm.com'
   - '+.adubest.com'
   - '+.adukwai.com'
@@ -7693,7 +7699,6 @@ payload:
   - '+.ai-start.com'
   - '+.ai-thinker.com'
   - '+.ai.cc'
-  - '+.ai.mr'
   - '+.ai012.com'
   - '+.ai2hao.com'
   - '+.ai7.com'
@@ -10621,7 +10626,6 @@ payload:
   - '+.bibgame.com'
   - '+.bibibi.net'
   - '+.bibiku.com'
-  - '+.bibitie.com'
   - '+.biblibili.com'
   - '+.bibuzhengxing.com'
   - '+.bicn.vip'
@@ -10934,6 +10938,7 @@ payload:
   - '+.biubiu.tv'
   - '+.biubiu001.com'
   - '+.biubiubiu.org'
+  - '+.biulie.com'
   - '+.bivean.com'
   - '+.biwanshequ.com'
   - '+.bixiabook.com'
@@ -11438,6 +11443,7 @@ payload:
   - '+.bob-cardif.com'
   - '+.bob-leasing.com'
   - '+.bob2012.com'
+  - '+.bob4885.com'
   - '+.bobaow.com'
   - '+.bobbns.com'
   - '+.bobcfc.com'
@@ -12625,6 +12631,7 @@ payload:
   - '+.cccmat.com'
   - '+.cccnec.com'
   - '+.cccollector.com'
+  - '+.cccovvv.com'
   - '+.cccpan.com'
   - '+.cccsql.com'
   - '+.ccctspm.org'
@@ -12776,6 +12783,7 @@ payload:
   - '+.ccshao.com'
   - '+.ccshell.com'
   - '+.ccsph.com'
+  - '+.ccssmm.com'
   - '+.cct08.com'
   - '+.cct365.net'
   - '+.cctalk.com'
@@ -12955,6 +12963,7 @@ payload:
   - '+.cdncloud.org'
   - '+.cdnclouds.net'
   - '+.cdnczydwl.com'
+  - '+.cdndd.net'
   - '+.cdndm.com'
   - '+.cdndm5.com'
   - '+.cdndm5.net'
@@ -15252,6 +15261,7 @@ payload:
   - '+.cn-lcd.com'
   - '+.cn-msedge.net'
   - '+.cn-mw.com'
+  - '+.cn-natural.com'
   - '+.cn-office.com'
   - '+.cn-psy.com'
   - '+.cn-railway.net'
@@ -16741,6 +16751,7 @@ payload:
   - '+.ctocio.com'
   - '+.ctoclub.com'
   - '+.ctoutiao.com'
+  - '+.ctracer.net'
   - '+.ctrip-lvyou.com'
   - '+.ctrip-ttd.hk'
   - '+.ctrip.co.id'
@@ -17765,6 +17776,7 @@ payload:
   - '+.ddsy.com'
   - '+.ddtugame.com'
   - '+.ddtui.com'
+  - '+.ddtxgame.com'
   - '+.ddtz5.com'
   - '+.ddun.com'
   - '+.ddurl.to'
@@ -17809,7 +17821,6 @@ payload:
   - '+.debuggap.com'
   - '+.debugger.wiki'
   - '+.debugo.com'
-  - '+.debugtalk.com'
   - '+.debuycn.com'
   - '+.decard.com'
   - '+.decentcapital.com'
@@ -21881,6 +21892,7 @@ payload:
   - '+.fifsky.com'
   - '+.figoc.pw'
   - '+.fiinote.com'
+  - '+.fiio.com'
   - '+.fiio.net'
   - '+.filcochina.com'
   - '+.file001.com'
@@ -22585,7 +22597,6 @@ payload:
   - '+.funshion.com'
   - '+.funshion.net'
   - '+.funshipin.com'
-  - '+.funtimebbs.com'
   - '+.funtoygame.com'
   - '+.funvge.com'
   - '+.funwear.com'
@@ -27213,6 +27224,7 @@ payload:
   - '+.hotkey123.com'
   - '+.hotkidclub.com'
   - '+.hotking.com'
+  - '+.hotnewx.com'
   - '+.hotoos.com'
   - '+.hotpotpro.com'
   - '+.hotpub.com'
@@ -29082,6 +29094,7 @@ payload:
   - '+.idtcdn.com'
   - '+.idtechwh.com'
   - '+.idu9.com'
+  - '+.iduba.com'
   - '+.iduo8.com'
   - '+.iduochong.com'
   - '+.iduodou.com'
@@ -29551,7 +29564,6 @@ payload:
   - '+.imaschina.com'
   - '+.imatchic.com'
   - '+.imatlas.com'
-  - '+.imaycon.com'
   - '+.imayitxt.com'
   - '+.imazingchina.com'
   - '+.imbackr.com'
@@ -29873,6 +29885,7 @@ payload:
   - '+.intaek.com'
   - '+.intcache.net'
   - '+.intdmp.com'
+  - '+.intecol-10iwc.com'
   - '+.intekey.com'
   - '+.intel-space.com'
   - '+.intelcupid.com'
@@ -31133,6 +31146,7 @@ payload:
   - '+.jiajuol.com'
   - '+.jiakaobaodian.com'
   - '+.jiakaodashi.com'
+  - '+.jiakaokemuyi.com'
   - '+.jiakeshuma.com'
   - '+.jialaxin.cc'
   - '+.jialebao.cc'
@@ -31848,6 +31862,7 @@ payload:
   - '+.jiuhuang.com'
   - '+.jiuhuar.com'
   - '+.jiuhuashan.cc'
+  - '+.jiuishizanjin.com'
   - '+.jiujiange.com'
   - '+.jiujiuhuyu.com'
   - '+.jiujiui.com'
@@ -33437,6 +33452,7 @@ payload:
   - '+.kcjyyjzzs.com'
   - '+.kcjzsc.com'
   - '+.kcloudidc.com'
+  - '+.kcouxp.com'
   - '+.kcrcb.com'
   - '+.kcwiki.org'
   - '+.kcyuri.com'
@@ -33748,6 +33764,7 @@ payload:
   - '+.kingsoft-office-service.com'
   - '+.kingsoft.com'
   - '+.kingsoft.net'
+  - '+.kingsoftstore.com'
   - '+.kingst.org'
   - '+.kingstarfintech.com'
   - '+.kingstarmedical.com'
@@ -34131,7 +34148,6 @@ payload:
   - '+.kscac.com'
   - '+.kscdns.com'
   - '+.ksdkcks.com'
-  - '+.ksdlp.com'
   - '+.ksdown.com'
   - '+.ksdq0514.com'
   - '+.ksense.com'
@@ -35301,7 +35317,6 @@ payload:
   - '+.leocode.net'
   - '+.leohoo.xyz'
   - '+.leonblog.net'
-  - '+.leonshadow.com'
   - '+.leozwang.com'
   - '+.lepaiok.com'
   - '+.lepaowang.com'
@@ -35364,7 +35379,6 @@ payload:
   - '+.levect.com'
   - '+.levelinfinite.com'
   - '+.leviding.com'
-  - '+.levy.work'
   - '+.lewaila.com'
   - '+.lewaimai.com'
   - '+.lewanduo.com'
@@ -35613,7 +35627,6 @@ payload:
   - '+.lichengwu.net'
   - '+.lichenjy.com'
   - '+.lichensafe.com'
-  - '+.lickhang.com'
   - '+.licomsh.com'
   - '+.licqi.com'
   - '+.licstar.net'
@@ -36047,11 +36060,11 @@ payload:
   - '+.liugezhou.online'
   - '+.liugj.com'
   - '+.liugm.com'
+  - '+.liugong.com'
   - '+.liuguofeng.com'
   - '+.liuhaolin.com'
   - '+.liujiajia.me'
   - '+.liujiangblog.com'
-  - '+.liujiasj.com'
   - '+.liujijun.com'
   - '+.liujto.com'
   - '+.liujunworld.com'
@@ -36214,6 +36227,7 @@ payload:
   - '+.ljtx.com'
   - '+.ljwit.com'
   - '+.ljxww.com'
+  - '+.ljyhtg.com'
   - '+.ljzfin.com'
   - '+.lkcash.com'
   - '+.lkcgyl.com'
@@ -37690,7 +37704,6 @@ payload:
   - '+.mattge.com'
   - '+.mattressmachinery.net'
   - '+.mauu.me'
-  - '+.mavuz.com'
   - '+.mawei.live'
   - '+.mawen.co'
   - '+.mawentao.com'
@@ -39860,6 +39873,7 @@ payload:
   - '+.n77777777.com'
   - '+.n802.com'
   - '+.n8389.com'
+  - '+.n928ti.cyou'
   - '+.n9cn.net'
   - '+.n9z.net'
   - '+.naadou.com'
@@ -40127,7 +40141,6 @@ payload:
   - '+.nengapp.com'
   - '+.nenggeimall.com'
   - '+.nengshida.com'
-  - '+.nengyongma.com'
   - '+.nengzuo.com'
   - '+.nenup.com'
   - '+.neo.org'
@@ -45727,7 +45740,6 @@ payload:
   - '+.runtronic.com'
   - '+.runwise.co'
   - '+.runwith.cc'
-  - '+.runzhize.com'
   - '+.runzi.cc'
   - '+.ruochu.com'
   - '+.ruofan.me'
@@ -46846,6 +46858,7 @@ payload:
   - '+.shangji998.com'
   - '+.shangjialianpage6.win'
   - '+.shangjilian.com'
+  - '+.shangjinssp.com'
   - '+.shangjinuu.com'
   - '+.shanglv51.com'
   - '+.shangmayuan.com'
@@ -47147,6 +47160,7 @@ payload:
   - '+.shenyecg.com'
   - '+.shenyehd.com'
   - '+.shenyou.tv'
+  - '+.shenyu.me'
   - '+.shenyunlaw.com'
   - '+.shenzan.com'
   - '+.shenzaole.com'
@@ -47588,7 +47602,6 @@ payload:
   - '+.shu163.com'
   - '+.shuabuapp.com'
   - '+.shuadanfu.com'
-  - '+.shuai.win'
   - '+.shuaibo.wang'
   - '+.shuaigeshe.com'
   - '+.shuaihuajun.com'
@@ -48911,7 +48924,6 @@ payload:
   - '+.soven.com'
   - '+.sovxin.com'
   - '+.sowang.com'
-  - '+.sowangpan.com'
   - '+.soweather.com'
   - '+.sowellwell.com'
   - '+.sowin.com'
@@ -52205,7 +52217,6 @@ payload:
   - '+.ttshengbei.com'
   - '+.ttsmmwb.com'
   - '+.ttsq.xyz'
-  - '+.ttsq6.net'
   - '+.ttstream.com'
   - '+.ttsz8.com'
   - '+.ttt.sh'
@@ -52723,6 +52734,7 @@ payload:
   - '+.tzsnw.com'
   - '+.tzsports.com'
   - '+.tzsti.com'
+  - '+.tzsysp.com'
   - '+.tztusi.com'
   - '+.tzvtc.com'
   - '+.tzxgzk.com'
@@ -52986,6 +52998,7 @@ payload:
   - '+.ujakn.com'
   - '+.ujia007.com'
   - '+.ujian.cc'
+  - '+.ujiaoshou.com'
   - '+.ujinbi.com'
   - '+.ujing.online'
   - '+.ujipin.com'
@@ -55257,6 +55270,7 @@ payload:
   - '+.westsecu.com'
   - '+.westsummitcap.com'
   - '+.wesure100.com'
+  - '+.wetaoke.com'
   - '+.wetest.net'
   - '+.wetherm.com'
   - '+.weti.me'
@@ -55899,6 +55913,7 @@ payload:
   - '+.wk2.com'
   - '+.wk78.com'
   - '+.wkai.cc'
+  - '+.wkandian.com'
   - '+.wkanx.com'
   - '+.wkbins.com'
   - '+.wkcmall.com'
@@ -56032,7 +56047,6 @@ payload:
   - '+.wo188.win'
   - '+.wo1990.com'
   - '+.wo685.com'
-  - '+.wo81.com'
   - '+.woa.com'
   - '+.woaap.com'
   - '+.woaide.com'
@@ -57937,6 +57951,8 @@ payload:
   - '+.xiguabook.com'
   - '+.xiguaimg.com'
   - '+.xiguaji.com'
+  - '+.xiguang.xyz'
+  - '+.xiguangtech.com'
   - '+.xiguaplayer.com'
   - '+.xiguavideo.net'
   - '+.xigushan.com'
@@ -58950,6 +58966,7 @@ payload:
   - '+.xuanke.com'
   - '+.xuanlishi.com'
   - '+.xuannaer.com'
+  - '+.xuanqii.com'
   - '+.xuanquge.com'
   - '+.xuanqun.com'
   - '+.xuanruanjian.com'
@@ -59153,6 +59170,7 @@ payload:
   - '+.xunruicms.com'
   - '+.xunsearch.com'
   - '+.xunshou.com'
+  - '+.xunsl.com'
   - '+.xuntou.com'
   - '+.xuntuoguan.com'
   - '+.xunurl.com'
@@ -62095,6 +62113,7 @@ payload:
   - '+.yuzhuan.com'
   - '+.yuzhulin.com'
   - '+.yuzi.net'
+  - '+.yuzunzhi.com'
   - '+.yuzvf.com'
   - '+.yuzzl.com'
   - '+.yveqi.com'
@@ -64971,6 +64990,7 @@ payload:
   - '+.zykjgame.com'
   - '+.zyku.net'
   - '+.zyl.me'
+  - '+.zylife.ren'
   - '+.zyloushi.com'
   - '+.zymc1.com'
   - '+.zymkcdn.com'
