--- a/directbak.yaml
+++ b/directbak.yaml
@@ -2547,7 +2547,6 @@ payload:
   - '+.318ek.com'
   - '+.31966.net'
   - '+.3198.com'
-  - '+.3199.com'
   - '+.319n.com'
   - '+.31alu.com'
   - '+.31bxg.com'
@@ -4972,6 +4971,7 @@ payload:
   - '+.5kcrm.net'
   - '+.5kda.com'
   - '+.5khouse.com'
+  - '+.5l4trd8ilk.com'
   - '+.5lanren.com'
   - '+.5lbw.com'
   - '+.5lejob.com'
@@ -5491,7 +5491,6 @@ payload:
   - '+.71baomu.net'
   - '+.71big.net'
   - '+.71dm.com'
-  - '+.71du.com'
   - '+.71e.com'
   - '+.71edge.com'
   - '+.71k.com'
@@ -5700,7 +5699,6 @@ payload:
   - '+.78gk.com'
   - '+.78hr.com'
   - '+.78oa.com'
-  - '+.78pan.com'
   - '+.78tp.com'
   - '+.79.com'
   - '+.79151879798.com'
@@ -7320,6 +7318,7 @@ payload:
   - '+.acgw.pw'
   - '+.acgz.xyz'
   - '+.acgzc.com'
+  - '+.achiming.com'
   - '+.achsd.com'
   - '+.aci-wh.com'
   - '+.acing.com'
@@ -7515,6 +7514,7 @@ payload:
   - '+.adzar-energy.com'
   - '+.adzh.com'
   - '+.adzhongdian.com'
+  - '+.adznb.com'
   - '+.adzop.com'
   - '+.adzshd.com'
   - '+.ae-people.com'
@@ -9900,7 +9900,6 @@ payload:
   - '+.baochaojianghu.com'
   - '+.baodan360.com'
   - '+.baodaohealth.com'
-  - '+.baodaosz.com'
   - '+.baodaren.net'
   - '+.baodigs.com'
   - '+.baodingmeishi.com'
@@ -11238,6 +11237,7 @@ payload:
   - '+.bjydzy.com'
   - '+.bjyestar.com'
   - '+.bjyhwy.com'
+  - '+.bjyingyun.com'
   - '+.bjyixiaojian.com'
   - '+.bjyqsj.com'
   - '+.bjythd.com'
@@ -11695,7 +11695,6 @@ payload:
   - '+.brandvista.com'
   - '+.brbtyt.com'
   - '+.breadtrip.com'
-  - '+.breakingnewsireland.com'
   - '+.breakyizhan.com'
   - '+.brentron.com'
   - '+.brg0.com'
@@ -12384,7 +12383,6 @@ payload:
   - '+.canaan-creative.com'
   - '+.canasy.com'
   - '+.cancda.net'
-  - '+.cancer-note.com'
   - '+.candicebeverly.com'
   - '+.candou.com'
   - '+.candylab.net'
@@ -12436,7 +12434,6 @@ payload:
   - '+.canyon-model.com'
   - '+.canyouchina.com'
   - '+.canyuanzs.com'
-  - '+.canzhisz.com'
   - '+.caobao.com'
   - '+.caodan.org'
   - '+.caogen.com'
@@ -13425,6 +13422,7 @@ payload:
   - '+.changshabdc.com'
   - '+.changshang.com'
   - '+.changshiban.com'
+  - '+.changtong2800.com'
   - '+.changtounet.com'
   - '+.changtu.com'
   - '+.changxie.com'
@@ -13457,7 +13455,6 @@ payload:
   - '+.chaochaojin.com'
   - '+.chaofan.com'
   - '+.chaofan.wang'
-  - '+.chaofan365.com'
   - '+.chaofanaishangyu.com'
   - '+.chaofanshuma.com'
   - '+.chaofenxiang.vip'
@@ -13510,7 +13507,6 @@ payload:
   - '+.chapaofan.com'
   - '+.chaping.tv'
   - '+.chappell1811.com'
-  - '+.chapuw.com'
   - '+.chargerlab.com'
   - '+.chargerlink.com'
   - '+.charlottebeverly.com'
@@ -14667,7 +14663,6 @@ payload:
   - '+.chuangye98.com'
   - '+.chuangyebaba.com'
   - '+.chuangyejia.com'
-  - '+.chuangyejia.vip'
   - '+.chuangyejmw.com'
   - '+.chuangyepu.com'
   - '+.chuangyijisu.com'
@@ -16123,7 +16118,6 @@ payload:
   - '+.coolfd.com'
   - '+.coolgamebox.com'
   - '+.coolgua.net'
-  - '+.coolguang.com'
   - '+.coolkit.cc'
   - '+.coolkk.net'
   - '+.coolling.net'
@@ -17350,7 +17344,6 @@ payload:
   - '+.dandanz.com'
   - '+.dandinghuayi.com'
   - '+.dandongbank.com'
-  - '+.dandoudou.com'
   - '+.danews.cc'
   - '+.dang-jian.com'
   - '+.dang3.com'
@@ -19668,7 +19661,6 @@ payload:
   - '+.dzdvip.com'
   - '+.dzfc.com'
   - '+.dzfxh.com'
-  - '+.dzgoo.com'
   - '+.dzgxq.com'
   - '+.dzhaoj.com'
   - '+.dzhope.com'
@@ -22613,6 +22605,7 @@ payload:
   - '+.fusroda.io'
   - '+.fute.com'
   - '+.futu5.com'
+  - '+.futufin.com'
   - '+.futuhk.com'
   - '+.futuku.com'
   - '+.futuniuniu.com'
@@ -26226,6 +26219,7 @@ payload:
   - '+.hemamax.com'
   - '+.hemanc.com'
   - '+.hemaos.com'
+  - '+.hemaread.com'
   - '+.hemayouxi.com'
   - '+.hemayun.com'
   - '+.hemayx.com'
@@ -27204,6 +27198,7 @@ payload:
   - '+.hostker.com'
   - '+.hostker.net'
   - '+.hostkvm.com'
+  - '+.hostmonit.com'
   - '+.hostxen.com'
   - '+.hostyun.com'
   - '+.hotalk.com'
@@ -30574,7 +30569,6 @@ payload:
   - '+.iwyv.com'
   - '+.iwyvi.com'
   - '+.iwzwy.com'
-  - '+.ixb.cc'
   - '+.ixbren.net'
   - '+.ixcv.com'
   - '+.ixdc.org'
@@ -31564,6 +31558,7 @@ payload:
   - '+.jinfuzi.com'
   - '+.jing-xian.com'
   - '+.jingbei.li'
+  - '+.jingbo.net'
   - '+.jingbotech.com'
   - '+.jingc.com'
   - '+.jingcai360.net'
@@ -39225,7 +39220,6 @@ payload:
   - '+.moxfive.xyz'
   - '+.moxiai.com'
   - '+.moxian.com'
-  - '+.moxiaoqihuoguo.com'
   - '+.moxing.net'
   - '+.moxingyun.com'
   - '+.moxiu.com'
@@ -39419,7 +39413,6 @@ payload:
   - '+.mucfc.com'
   - '+.muchangqing.com'
   - '+.muchcloud.com'
-  - '+.muchlab.com'
   - '+.muchong.com'
   - '+.muchrank.com'
   - '+.mudgj.com'
@@ -39572,6 +39565,7 @@ payload:
   - '+.my7v.com'
   - '+.my88316666.com'
   - '+.my9166.com'
+  - '+.my91app.com'
   - '+.my9527.com'
   - '+.my97.net'
   - '+.myagric.com'
@@ -43435,7 +43429,6 @@ payload:
   - '+.qeeniao.com'
   - '+.qeerd.com'
   - '+.qefee.com'
-  - '+.qefeng.com'
   - '+.qeto.com'
   - '+.qf027.com'
   - '+.qfang.com'
@@ -45365,7 +45358,6 @@ payload:
   - '+.rjhcsoft.com'
   - '+.rjoy.com'
   - '+.rjreducer.com'
-  - '+.rjres.com'
   - '+.rjs.com'
   - '+.rjsjmbwx.com'
   - '+.rjsos.com'
@@ -45868,7 +45860,6 @@ payload:
   - '+.safehoo.com'
   - '+.safejmp.com'
   - '+.safenext.com'
-  - '+.safewiki.org'
   - '+.sagetrc.com'
   - '+.sagigame.net'
   - '+.sagocloud.com'
@@ -47330,7 +47321,6 @@ payload:
   - '+.shiqichuban.com'
   - '+.shiqidu.com'
   - '+.shiqu.com'
-  - '+.shiqumao.com'
   - '+.shiqutech.com'
   - '+.shishagame.com'
   - '+.shishangfengyun.com'
@@ -49065,7 +49055,6 @@ payload:
   - '+.sqsxs.com'
   - '+.squarecn.com'
   - '+.squarefong.com'
-  - '+.squrab.com'
   - '+.sqxy.net'
   - '+.sqzapp.com'
   - '+.sqzw.com'
@@ -49684,7 +49673,6 @@ payload:
   - '+.suyuening.com'
   - '+.suyugame.com'
   - '+.suyujoy.com'
-  - '+.suyunbo.tv'
   - '+.suyutech.com'
   - '+.suzhenyi.com'
   - '+.suzhou.cc'
@@ -50521,7 +50509,6 @@ payload:
   - '+.taohaobang.com'
   - '+.taohhui.com'
   - '+.taohua.com'
-  - '+.taohuaan.net'
   - '+.taohuazu.net'
   - '+.taohuazu.pw'
   - '+.taohui.pub'
@@ -51101,7 +51088,6 @@ payload:
   - '+.ths8.com'
   - '+.thseoer.com'
   - '+.thstars.com'
-  - '+.thstp.com'
   - '+.thtfpc.com'
   - '+.thumedialab.com'
   - '+.thundercdn.net'
@@ -56401,7 +56387,6 @@ payload:
   - '+.wshang.com'
   - '+.wshangw.net'
   - '+.wshenm.com'
-  - '+.wshili.com'
   - '+.wshost.cc'
   - '+.wshoto.com'
   - '+.wshtgame.com'
@@ -57295,7 +57280,6 @@ payload:
   - '+.xfyxfy.com'
   - '+.xfzhsf.com'
   - '+.xfztc.com'
-  - '+.xfzyun.com'
   - '+.xgamevip.com'
   - '+.xgantt.net'
   - '+.xgcs618.com'
@@ -57523,7 +57507,6 @@ payload:
   - '+.xiao-new.com'
   - '+.xiao-sports.com'
   - '+.xiao.lu'
-  - '+.xiao6.tv'
   - '+.xiao84.com'
   - '+.xiao89.com'
   - '+.xiaoa.name'
@@ -59227,6 +59210,7 @@ payload:
   - '+.xwjqr.com'
   - '+.xwjr.com'
   - '+.xwjy.org'
+  - '+.xwkjcms.com'
   - '+.xwko.com'
   - '+.xwlunwen.com'
   - '+.xwlxw.com'
@@ -59922,7 +59906,6 @@ payload:
   - '+.yeeyan.com'
   - '+.yeeyan.org'
   - '+.yeeyk.com'
-  - '+.yeezhe.com'
   - '+.yefu365.com'
   - '+.yegame.com'
   - '+.yegenyou.com'
@@ -61964,7 +61947,6 @@ payload:
   - '+.yunsd.net'
   - '+.yunser.com'
   - '+.yunshan.net'
-  - '+.yunshangc.com'
   - '+.yunshangnc.com'
   - '+.yunshanmeicai.com'
   - '+.yunshiketang.xyz'
@@ -62562,7 +62544,6 @@ payload:
   - '+.zcaijing.com'
   - '+.zcccc.com'
   - '+.zcdog.com'
-  - '+.zcdsp.com'
   - '+.zcfc.com'
   - '+.zcfirst.com'
   - '+.zcfuhua.com'
@@ -62660,6 +62641,7 @@ payload:
   - '+.zebred.com'
   - '+.zechoriah.com'
   - '+.zechunbengye.com'
+  - '+.zeda1.com'
   - '+.zedukm.com'
   - '+.zeelis.com'
   - '+.zeesin.com'
@@ -63604,7 +63586,6 @@ payload:
   - '+.zhongyao1.com'
   - '+.zhongyaoyi.com'
   - '+.zhongye.net'
-  - '+.zhongyegongkao.com'
   - '+.zhongyiiot.com'
   - '+.zhongyiju360.com'
   - '+.zhongyishangwu.com'
@@ -64401,7 +64382,6 @@ payload:
   - '+.znyseo.com'
   - '+.znyshurufa.com'
   - '+.znznet.net'
-  - '+.zo-l.net'
   - '+.zoassetmanagement.com'
   - '+.zocai.com'
   - '+.zodiac.wang'
@@ -64776,7 +64756,6 @@ payload:
   - '+.zuodao.com'
   - '+.zuodashi.com'
   - '+.zuodia.com'
-  - '+.zuofanwang.com'
   - '+.zuogj.com'
   - '+.zuohaotu.com'
   - '+.zuohuodong.com'
