--- a/directbak.yaml
+++ b/directbak.yaml
@@ -79,7 +79,6 @@ payload:
   - '+.010dsmzyy.com'
   - '+.010jianzhan.com'
   - '+.010lf.com'
-  - '+.0110m.com'
   - '+.0119.com'
   - '+.0123401234.com'
   - '+.0123456789.com'
@@ -181,7 +180,6 @@ payload:
   - '+.024888.net'
   - '+.02489.com'
   - '+.024bj.com'
-  - '+.024bxkj.com'
   - '+.024eps.com'
   - '+.024feida.com'
   - '+.024frde.com'
@@ -1020,6 +1018,7 @@ payload:
   - '+.12225.com'
   - '+.12226.com'
   - '+.12227.com'
+  - '+.122cha.com'
   - '+.122park.com'
   - '+.123-789.com'
   - '+.123-biyezheng.org'
@@ -1204,7 +1203,6 @@ payload:
   - '+.1392189.com'
   - '+.13937180868.com'
   - '+.13973.com'
-  - '+.139cai.com'
   - '+.139cm.com'
   - '+.139down.com'
   - '+.139life.com'
@@ -2582,7 +2580,6 @@ payload:
   - '+.31taoci.com'
   - '+.31wj.com'
   - '+.31xj.com'
-  - '+.31xjd.com'
   - '+.31xs.com'
   - '+.31xs.net'
   - '+.31yarn.com'
@@ -6403,7 +6400,6 @@ payload:
   - '+.91all.net'
   - '+.91anjian.com'
   - '+.91art.net'
-  - '+.91b2b.com'
   - '+.91baby.com'
   - '+.91bee.com'
   - '+.91boshuo.com'
@@ -7707,6 +7703,7 @@ payload:
   - '+.aiagain.com'
   - '+.aiagain.net'
   - '+.aiai6.com'
+  - '+.aiaigu168.com'
   - '+.aiaor.com'
   - '+.aiba.com'
   - '+.aibaimm.com'
@@ -8347,6 +8344,7 @@ payload:
   - '+.allposs.com'
   - '+.allpyra.com'
   - '+.allrace.com'
+  - '+.allsaintsmusic.com'
   - '+.allsenseww.com'
   - '+.allstack.net'
   - '+.allstor.org'
@@ -8692,7 +8690,6 @@ payload:
   - '+.anzhixun.com'
   - '+.anzhuoapk.com'
   - '+.anzhuotan.com'
-  - '+.anzhuowo.com'
   - '+.anzogame.com'
   - '+.anzow.com'
   - '+.ao-hua.com'
@@ -8882,7 +8879,6 @@ payload:
   - '+.appgame.com'
   - '+.appganhuo.com'
   - '+.appgenuine.com'
-  - '+.appgz.com'
   - '+.appicplay.com'
   - '+.appinn.com'
   - '+.appjiagu.com'
@@ -10263,7 +10259,6 @@ payload:
   - '+.beecook.com'
   - '+.beedancing.com'
   - '+.beejoygames.com'
-  - '+.beejson.com'
   - '+.beekka.com'
   - '+.beelink.com'
   - '+.beemarket.tv'
@@ -10695,7 +10690,6 @@ payload:
   - '+.bigwww.com'
   - '+.bigxiao.com'
   - '+.bigzhong.com'
-  - '+.bigzhu.com'
   - '+.bihe0832.com'
   - '+.bihongbo.com'
   - '+.bihoo.com'
@@ -21052,7 +21046,6 @@ payload:
   - '+.eyesar.com'
   - '+.eyeshenzhen.com'
   - '+.eyeso.net'
-  - '+.eyexp.com'
   - '+.eyhsj.com'
   - '+.eyoodns.com'
   - '+.eyou.com'
@@ -21229,7 +21222,6 @@ payload:
   - '+.fan-yong.com'
   - '+.fan88.com'
   - '+.fanai.com'
-  - '+.fancai.com'
   - '+.fancl-vip.com'
   - '+.fancyapi.com'
   - '+.fancydsp.com'
@@ -25419,7 +25411,6 @@ payload:
   - '+.haobiaoke.com'
   - '+.haobtc.com'
   - '+.haocai.com'
-  - '+.haocai1688.com'
   - '+.haochang.tv'
   - '+.haochangyou.com'
   - '+.haocheedai.com'
@@ -36767,6 +36758,7 @@ payload:
   - '+.ltwkw.com'
   - '+.ltxjob.com'
   - '+.lty.fun'
+  - '+.ltyears.com'
   - '+.ltzsjt.com'
   - '+.lu.com'
   - '+.lu35.com'
@@ -38478,7 +38470,6 @@ payload:
   - '+.mijiadns.com'
   - '+.mijiannet.com'
   - '+.mijiayoupin.com'
-  - '+.mijishe.com'
   - '+.mijisou.com'
   - '+.mijwed.com'
   - '+.mika123.com'
@@ -40631,7 +40622,6 @@ payload:
   - '+.nmhfw.com'
   - '+.nmimi.com'
   - '+.nmkjxy.com'
-  - '+.nmmwz.com'
   - '+.nmtyxy.com'
   - '+.nmvps.com'
   - '+.nmweidian.com'
@@ -49753,6 +49743,7 @@ payload:
   - '+.swupdl.adobe.com'
   - '+.swwlotus.com'
   - '+.swwy.com'
+  - '+.sx1211.com'
   - '+.sx189.com'
   - '+.sx267.com'
   - '+.sxafz.com'
@@ -55658,7 +55649,6 @@ payload:
   - '+.wifichain.com'
   - '+.wifidog.pro'
   - '+.wifidown.com'
-  - '+.wifigushi.com'
   - '+.wifigx.com'
   - '+.wifilu.com'
   - '+.wifimsl.com'
@@ -57203,7 +57193,6 @@ payload:
   - '+.xdxmwang.com'
   - '+.xdxx.ink'
   - '+.xdyqw.com'
-  - '+.xdzdzl.com'
   - '+.xedaojia.com'
   - '+.xedaojia.net'
   - '+.xeeee.net'
@@ -57768,6 +57757,7 @@ payload:
   - '+.xiaoxiangyoupin.com'
   - '+.xiaoxiansheng.com'
   - '+.xiaoxiao.com'
+  - '+.xiaoxiaodangan.com'
   - '+.xiaoxiaoketang.com'
   - '+.xiaoxiaomo.com'
   - '+.xiaoxiaotong.org'
@@ -60068,6 +60058,7 @@ payload:
   - '+.yhees.com'
   - '+.yhetent.com'
   - '+.yhfx.info'
+  - '+.yhgfb-cn-static.com'
   - '+.yhgo.wang'
   - '+.yhgo8.com'
   - '+.yhhh8888.com'
@@ -60904,7 +60895,6 @@ payload:
   - '+.yoe365.com'
   - '+.yofc.com'
   - '+.yofcjs.com'
-  - '+.yofebearing.com'
   - '+.yofijoy.com'
   - '+.yofish.com'
   - '+.yofond.com'
@@ -64480,7 +64470,6 @@ payload:
   - '+.zpjiashuo.com'
   - '+.zplayworld.com'
   - '+.zpm.so'
-  - '+.zppk.net'
   - '+.zppop.com'
   - '+.zppxba.com'
   - '+.zptong.com'
