--- a/directbak.yaml
+++ b/directbak.yaml
@@ -5241,7 +5241,6 @@ payload:
   - '+.669ye.com'
   - '+.66call.com'
   - '+.66cn.com'
-  - '+.66diqiu.com'
   - '+.66ds.net'
   - '+.66house.com'
   - '+.66ip.com'
@@ -6565,7 +6564,6 @@ payload:
   - '+.9211.com'
   - '+.921686.com'
   - '+.921716.com'
-  - '+.9217w.com'
   - '+.9217web.com'
   - '+.921lu.com'
   - '+.922000.com'
@@ -6918,7 +6916,6 @@ payload:
   - '+.999d.com'
   - '+.999dns.net'
   - '+.999inandon.com'
-  - '+.999kan.com'
   - '+.999tea.com'
   - '+.999wx.com'
   - '+.999xy.net'
@@ -13673,7 +13670,6 @@ payload:
   - '+.chenplus.com'
   - '+.chenpot.com'
   - '+.chenruixuan.com'
-  - '+.chenrunjinshu.com'
   - '+.chenshipin.com'
   - '+.chensonglin.net'
   - '+.chensuyang.com'
@@ -14538,7 +14534,6 @@ payload:
   - '+.chncpa.org'
   - '+.chncwds.com'
   - '+.chndesign.com'
-  - '+.chndsnews.com'
   - '+.chndtb.com'
   - '+.chnews.net'
   - '+.chnfi.com'
@@ -22897,7 +22892,6 @@ payload:
   - '+.gamefm.com'
   - '+.gamefv.com'
   - '+.gamehome.tv'
-  - '+.gamehui.com'
   - '+.gameinns.com'
   - '+.gameiy.com'
   - '+.gamejym.com'
@@ -25734,7 +25728,6 @@ payload:
   - '+.hbddrn.com'
   - '+.hbdfdh.com'
   - '+.hbdmia.com'
-  - '+.hbdthy.com'
   - '+.hbdtjqj.com'
   - '+.hbdzcg.com'
   - '+.hbeducloud.com'
@@ -31261,6 +31254,7 @@ payload:
   - '+.jiantuku.com'
   - '+.jianwang360.com'
   - '+.jianweitv.com'
+  - '+.jianwenapp.com'
   - '+.jianxin-tech.com'
   - '+.jianxinyun.com'
   - '+.jianxun.io'
@@ -37365,7 +37359,6 @@ payload:
   - '+.maimaimaiw.com'
   - '+.maimemo.com'
   - '+.maimemostatus.com'
-  - '+.maimengjun.com'
   - '+.maimiaotech.com'
   - '+.maimn.com'
   - '+.maimowang.com'
@@ -38997,6 +38990,7 @@ payload:
   - '+.mofangyu.com'
   - '+.mofavideo.com'
   - '+.mofazhu.com'
+  - '+.moffettai.com'
   - '+.mofile.com'
   - '+.mofishgames.com'
   - '+.mofoun.com'
@@ -39604,7 +39598,6 @@ payload:
   - '+.mycoss.net'
   - '+.mycoss.org'
   - '+.mycreate.net'
-  - '+.mycrtb.com'
   - '+.mydadao.com'
   - '+.mydao.net'
   - '+.mydbfx.com'
@@ -42534,7 +42527,6 @@ payload:
   - '+.pinshu.com'
   - '+.pinsilianzu1.com'
   - '+.pinsilianzu3.com'
-  - '+.pintour.com'
   - '+.pintu360.com'
   - '+.pintuan.com'
   - '+.pintuer.com'
@@ -44226,7 +44218,6 @@ payload:
   - '+.qq387.com'
   - '+.qq5.com'
   - '+.qq52o.me'
-  - '+.qq545.com'
   - '+.qq5818.com'
   - '+.qq717.com'
   - '+.qq7c.com'
@@ -48254,6 +48245,7 @@ payload:
   - '+.sketchchina.com'
   - '+.sketchchina.net'
   - '+.sketchcn.com'
+  - '+.sketchk.xyz'
   - '+.sketchupbar.com'
   - '+.sketchupbbs.com'
   - '+.skg.com'
@@ -49437,6 +49429,7 @@ payload:
   - '+.suizui.net'
   - '+.sujh.net'
   - '+.sujiaozhipin888.com'
+  - '+.suki.club'
   - '+.sukimad.com'
   - '+.sukiu.net'
   - '+.sukkaw.com'
@@ -51166,7 +51159,6 @@ payload:
   - '+.tianqi.com'
   - '+.tianqi123.com'
   - '+.tianqi321.com'
-  - '+.tianqi4.com'
   - '+.tianqi518.com'
   - '+.tianqiaojuyuan.com'
   - '+.tianqiaoyishuzhongxin.org'
@@ -52760,6 +52752,7 @@ payload:
   - '+.u9u9.com'
   - '+.u9wan.com'
   - '+.ua168.com'
+  - '+.uahh.site'
   - '+.uami-global.org'
   - '+.uao-online.com'
   - '+.uao.so'
@@ -60786,7 +60779,6 @@ payload:
   - '+.ymd88.com'
   - '+.ymeme.com'
   - '+.ymexf.com'
-  - '+.ymfhbcj.net'
   - '+.ymfile.com'
   - '+.ymfile01.com'
   - '+.ymgmno.com'
@@ -62873,7 +62865,6 @@ payload:
   - '+.zgyongxin.com'
   - '+.zgys.net'
   - '+.zgyssyxh.com'
-  - '+.zgystsd.com'
   - '+.zgyxsw.org'
   - '+.zgyygl.com'
   - '+.zgzb.com'
@@ -63172,7 +63163,6 @@ payload:
   - '+.zhenimg.com'
   - '+.zhenjiang-marathon.com'
   - '+.zhenleishan.com'
-  - '+.zhenlishen.com'
   - '+.zhenpin.com'
   - '+.zhenren.com'
   - '+.zhenrongbao.com'
